[tool.poetry]
name = "open-analytics-platform"
version = "0.1.0"
description = "An open-source intelligent data analysis platform"
authors = ["Tianyu Zhuang <zz_666666@126.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.3"
pandas = "2.0.3"
flask = "2.1.3"
echarts-python = "0.1.3"
matplotlib = "<3.7.4"
seaborn = "0.13.0"
plotly = "5.18.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
flake8 = "7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
